fix: change the behavior of shift button clicked

--- a/style.css
+++ b/style.css
@@ -42,7 +42,6 @@
 
 .capitalize {
   text-transform: capitalize;
-  font-weight: bold;
 }
 
 .pressed {
